# dear

./: .gitmodules  CMakeLists.txt  README.md  dear.h  main.cpp
cmake/: cr.cmake  gl3w.cmake  imapp.cmake  imgui.cmake  imgui_impl_platform.cmake  imgui_impl_renderer.cmake
plugins/example/: CMakeLists.txt  main.cpp
